# structured-outputs

./: .gitignore  AGENTS.md  README.md  pyproject.toml
results/: README.md  dumbbell_plot.py
src/financial_ner/baml/: README.md  evaluate.py  extract.py
src/financial_ner/baml/baml_src/: extract.baml
src/financial_ner/data/: README.md  debug.py  financial_ner.parquet  get_data.py  gold.json
src/financial_ner/dspy/: README.md  evaluate.py  extract.py
src/insurance_claims/baml/: README.md  evaluate.py  extract.py  utils.py
src/insurance_claims/baml/baml_src/: clients.baml  extract.baml
src/insurance_claims/data/: README.md  insurance_claims_extraction.parquet  insurance_claims_gold.json
src/insurance_claims/dspy/: README.md  evaluate.py  extract.py  schema.py  utils.py
src/patient_notes/baml/: README.md  evaluate.py  extract.py
src/patient_notes/baml/baml_src/: clients.baml  extract.baml
src/patient_notes/data/: README.md  debug.py  gold.json  note.json  transform_fhir.py
src/patient_notes/dspy/: README.md  baml_adapter.py  debug.py  evaluate.py  extract.py
src/patient_notes/dspy_toon_adapter/: evaluate.py  extract.py  toon.py  toon_adapter.py
src/pii/baml/: README.md  evaluate.py  extract.py
src/pii/baml/baml_src/: extract.baml
src/pii/data/: README.md  debug.py  get_data.py  gold.json  pii.parquet
src/pii/dspy/: README.md  debug.py  evaluate.py  extract.py  schema.py
