[project]
name = "dspy-baml-experiments"
version = "0.1.0"
description = "Experiments comparing DSPy and BAML for similar tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.215.0",
    "dspy>=3.0.4",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.1.1",
]
